objects/Account.object
<CustomObject>
    <fields>
        <fullName>Jumio_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumio_Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jumio_Status__c</fullName>
        <label>Jumio Document</label>
        <picklist>
            <picklistValues>
                <fullName>Uploaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jumio_Status_new__c</fullName>
        <formula>IF(
 AND(NOT(ISPICKVAL(Jumio_Status__c,&apos;Uploaded&apos;)),NOT(ISPICKVAL( Jumio_Status__c,&apos;&apos;)),
       OR(FaceMatchScore__c &lt; 90, identity_match__c == False,ISPICKVAL( Jumio_Status__c,&apos;Declined&apos;)
         )),&apos;Fail&apos;,
IF(
AND(Text(FaceMatchScore__c) !=&apos;&apos;,
    FaceMatchScore__c &gt;= 90,identity_match__c==True,ISPICKVAL( Jumio_Status__c,&apos;Verified&apos;), CaptureMethod__c == &apos;WEB_CAM&apos;
   ),&apos;Pass&apos;,
IF(
  AND(Text(FaceMatchScore__c) !=&apos;&apos;,OR(ISPICKVAL( Jumio_Status__c,&apos;Verified&apos;),ISPICKVAL( Jumio_Status__c,&apos;Uploaded&apos;)),
     FaceMatchScore__c &gt;= 90,identity_match__c==True,CaptureMethod__c == &apos;WEB_UPLOAD&apos;
     ),&apos;Refer&apos;,&apos;&apos;
  )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jumio Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Visited_Range__c</fullName>
        <formula>IF((TODAY() - CRM_Last_Visited_Date__c ) &lt; 15 , &apos;Green&apos;, 
IF((TODAY() - CRM_Last_Visited_Date__c ) &gt;= 15 &amp;&amp; (TODAY() - CRM_Last_Visited_Date__c ) &lt;= 45 , &apos;Amber&apos;, 
&apos;Red&apos;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Visited Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_RCTI_Sent_On__c</fullName>
        <label>Latest RCTI Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Name__c</fullName>
        <label>Lender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Account_Id__c</fullName>
        <label>Loan Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Communication__c</fullName>
        <label>Marketing Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reward</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Master Account)</relationshipLabel>
        <relationshipName>MasterAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SCV</description>
        <label>Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Activity_Target__c</fullName>
        <label>Monthly Activity Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Dependants__c</fullName>
        <label>Number of Dependants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTP__c</fullName>
        <label>OTP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAFSS_Existing_User_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing User Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAFSS_New_User_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New User Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PepSecond_OTP__c</fullName>
        <label>Second OTP</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SCV - Flag to hide merged records from system</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probate_Or_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Probate Or Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Of_Death__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Of Death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Link__c</fullName>
        <label>Referral Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referred_By_Code__c</fullName>
        <label>Referred By Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <label>Relationship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De Facto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retrieval_Code__c</fullName>
        <label>Retrieval Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCV_Person_Birthdate_Timestamp__c</fullName>
        <description>SCV - Store copy of PersonBirthdate to be used for Matching Rule</description>
        <label>Person Birthdate Timestamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_OTP_Generation_Time__c</fullName>
        <label>Second OTP Generation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_OTP__c</fullName>
        <label>Second OTP</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Asset_list__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Asset list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Key__c</fullName>
        <label>Session Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Id__c</fullName>
        <label>Tracking Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>clcommon__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Legal_Entity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity Type</label>
        <referenceTo>clcommon__Legal_Entity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnotify__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cnotify__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Active__c</fullName>
        <label>Collection Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Disable_Collection_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will disable all the Collection Activities for this Account.</description>
        <inlineHelpText>Check it if you want to disable Collection Activities for this Account.</inlineHelpText>
        <label>Disable Collection Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__External_ID__c</fullName>
        <description>Reference for connected external Account/ Customer</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>collect__Invalid_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Address is invalid or not</description>
        <label>Invalid Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Invalid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Email is invalid or not</description>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Invalid_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Contact Number is invalid or not</description>
        <label>Invalid Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>genesis__Business_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Information</label>
        <referenceTo>genesis__Business_Information__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>identity_match__c</fullName>
        <formula>IF(AND(UPPER(FirstName) = UPPER(Jumio_First_Name__c), UPPER(LastName)  = UPPER(Jumio_Last_Name__c),PersonBirthdate =   Jumio_Date_Of_Birth__c),true,false)</formula>
        <label>identity match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Email__c</fullName>
        <description>email for yodlee fastlink2.0</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ints__SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Password__c</fullName>
        <description>Password for Yodlee Username.</description>
        <label>Yodlee_Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Username registered with Yodlee. This Username can have multiple bank accounts linked with Yodlee.</description>
        <label>Yodlee Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Borrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick, if the Account is a Broker.</inlineHelpText>
        <label>Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Collect_Service_Fees_on__c</fullName>
        <description>Service Fee Strategy on account</description>
        <inlineHelpText>Select the components of investor payments on which service fees is to be charged. Default value is taken from &quot;Fractionalization Parameters&quot; custom setting. If &quot;No Fees&quot; is selected, no service fee will be calculated on investor payments.</inlineHelpText>
        <label>Collect Service Fees on</label>
        <picklist>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fees</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__CustomerPriority__c</fullName>
        <label>Customer Priority (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Deployed_Funds__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Stores the total buying price of all the invested loans.</description>
        <inlineHelpText>Stores total invested amount in different loans by this investor.</inlineHelpText>
        <label>Total Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group (DEPRECATED)</label>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Donated_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Donated Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Got_Back_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Got Back Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Reinvested_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Reinvested Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Tax_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor Tax Configuration</label>
        <referenceTo>loan__Investor_Tax_Configuration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Type__c</fullName>
        <label>Investor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date (DEPRECATED)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SLASerialNumber__c</fullName>
        <label>SLA Serial Number (DEPRECATED)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__SLA__c</fullName>
        <label>SLA (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__SOCIAL_SECURITY_NUMBER__c</fullName>
        <label>SOCIAL_SECURITY_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Service_Rate_On_Investment__c</fullName>
        <defaultValue>$Setup.loan__Fractionalization_Parameters__c.loan__Default_Service_Rate__c</defaultValue>
        <inlineHelpText>Default service rate on investor&apos;s investments</inlineHelpText>
        <label>Service Rate On Investment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Invested_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total amount invested by the investor on all the loans.</description>
        <inlineHelpText>Total amount invested by the investor on all the loans.</inlineHelpText>
        <label>Total Invested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Pay_Off_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field gives the total pay-off amount as of today.</description>
        <inlineHelpText>This is the total pay-off amount of all loans as of today.</inlineHelpText>
        <label>Total Pay Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Total_Principal_Remaining__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total principal remaining in all the investment order of the investor.</description>
        <inlineHelpText>Total principal remaining in all the investment order of the investor.</inlineHelpText>
        <label>Total Invested Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Returns__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Return on Investment gained by Investor</description>
        <label>Total Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Deposits__c</fullName>
        <label>Uncleared Deposits</label>
        <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Withdrawals__c</fullName>
        <label>Uncleared Withdrawals</label>
        <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Reversed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Undeployed_Funds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount which is available to invest in loans.</description>
        <label>Available Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pafss_Account_Locked_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Account Locked Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pafss_Duplicate_Account_Ids__c</fullName>
        <label>Duplicate Account Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pafss_Duplication_Check_Key__c</fullName>
        <externalId>true</externalId>
        <label>Duplication Check Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pafss_Has_Duplicate_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Duplicate Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pafss_Non_Duplication_Check_Key__c</fullName>
        <externalId>true</externalId>
        <label>Non-Duplication Check Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pafss_PAF_Mailing_Address__c</fullName>
        <formula>PersonContact.MailingStreet &amp; IF(NOT(ISBLANK(PersonContact.MailingStreet))&amp;&amp;(NOT(ISBLANK(PersonContact.MailingCity)) || NOT(ISBLANK(PersonContact.MailingState)) || NOT(ISBLANK(PersonContact.MailingPostalCode)) || NOT(ISBLANK(PersonContact.MailingCountry))),&apos;, &apos;,null)&amp; PersonContact.MailingCity &amp; IF(NOT(ISBLANK(PersonContact.MailingCity))&amp;&amp;(NOT(ISBLANK(PersonContact.MailingState)) || NOT(ISBLANK(PersonContact.MailingPostalCode)) || NOT(ISBLANK(PersonContact.MailingCountry))),&apos;, &apos;,null) &amp; PersonContact.MailingState &amp; IF(NOT(ISBLANK(PersonContact.MailingState))&amp;&amp;(NOT(ISBLANK(PersonContact.MailingPostalCode)) || NOT(ISBLANK(PersonContact.MailingCountry))),&apos;, &apos;,null) &amp; PersonContact.MailingPostalCode &amp; IF(NOT(ISBLANK(PersonContact.MailingPostalCode))&amp;&amp;(NOT(ISBLANK(PersonContact.MailingCountry))),&apos;, &apos;,null) &amp; PersonContact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAF Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pafss_Portal_User_Created_Date_Time__c</fullName>
        <label>Portal User Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>peer__Amount_In_Funding__c</fullName>
        <label>Amount In Funding</label>
        <summarizedField>peer__Booking_Order__c.peer__Amount_In_Funding__c</summarizedField>
        <summaryForeignKey>peer__Booking_Order__c.peer__Investor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Auto_Invest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Invest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Borrower_Exposure_Limit_Amount__c</fullName>
        <formula>peer__Borrower_Exposure_Percentage__c * peer__Portfolio_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Exposure Limit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>peer__Borrower_Exposure_Percentage__c</fullName>
        <label>Borrower Exposure Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Borrower_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower Information</label>
        <referenceTo>peer__Borrower_Information__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>peer__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>peer__External_Id__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>peer__FB_Access_Token__c</fullName>
        <label>FB Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__FB_Image__c</fullName>
        <description>URL of user&apos;s Facebook Image</description>
        <label>FB Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>peer__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>